--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "login": "flotilia",
-  "posting_key": "5KBESZCXeqjj4Nw8gzv8LPVCXzi81jEmRtmeVw3wTty9LkYwb4o",
-"active_key": "5KZJ3Shah6cWjp8RVhnf9T6ouWtBBTpMkoHjnsg98sKLUGxMUtQ",
+  "posting_key": "5..................................................",
+"active_key": "5..................................................",
   "node": "wss://lindsay-golos.cf/ws",
 "port": 3300
 }
